--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
           <!-- <li><a class="nav-link scrollto" href="#specials">Especiales</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#events">Eventos</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li> -->
+          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -1326,7 +1326,7 @@
     <!-- End Gallery Section -->
 
     <!-- ======= Chefs Section ======= -->
-    <!-- <section id="chefs" class="chefs">
+    <section id="chefs" class="chefs">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -1372,7 +1372,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -1388,12 +1388,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
       </div>
-    </section>  -->
+    </section> 
     <!-- End Chefs Section -->
 
     <!-- ======= Contact Section ======= -->
