--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
           <!-- <li><a class="nav-link scrollto" href="#specials">Especiales</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#events">Eventos</a></li> -->
-          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li>
+          <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li> 
+          <!-- <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
