--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="languages d-none d-md-flex align-items-center">
         <ul>
           <li>ES</li>
-          <li><a href="#">EN</a></li>
+          <!--<li><a href="#">EN</a></li> -->
         </ul>
       </div>
     </div>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://www.instagram.com/reel/CwYUmQ9Mu3_/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="glightbox play-btn"></a>
+          <a href="https://youtu.be/lMz3wmfeHsk" class="glightbox play-btn"></a>
         </div>
 
       </div>
